# lamh

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  cabal.project  cabal.project.local  default.nix  lamh.cabal  lamha.cabal  shell.nix
app/: lamh.hs  lamha.hs
etc/: Dockerfile  Makefile  deploy.mk  docker.mk  init.mk  nix.mk  nix.sh
nix/: nix.json  nix.nix
src/: Aws.hs  Eg.hs  Http.hs  Lambda.hs  Util.hs
src/Aws/: Lambda.hs  Secret.hs
src/Aws/Event/: Kinesis.hs  S3.hs
src/Event/: ApiGatewayInput.hs  ApiGatewayOutput.hs  Event.hs  Kinesis.hs  S3.hs  Sns.hs
src/Http/: Client.hs
src/Internal/: EventUtil.hs  KinesisUtil.hs  S3Util.hs  SnsUtil.hs
src/Model/: Env.hs  Event.hs  Lambda.hs  Log.hs  Tty.hs
src/Model/Eg/: EchoEvent.hs  ExcLogTty.hs  Hackage.hs  Tty.hs
src/Network/: Aws.hs
src/Sem/: Eg.hs  Env.hs  Lambda.hs  Log.hs  Tty.hs
src/Sem/Eg/: ExcLogTty.hs  Hackage.hs
