cabal-version:        2.4
name:                 lamh
version:              0.1.0.0
license:              BSD-3-Clause
license-file:         LICENSE
author:               delivery group | earnestresearch.com
maintainer:           mlee@earnestresearch.com
category:             aws
extra-source-files:   CHANGELOG.md

library
  exposed-modules:    Event.ApiGatewayInput
                    , Event.ApiGatewayOutput
                    , Event.Event
                    , Event.Kinesis
                    , Event.S3
                    , Event.Sns
                    , Lambda
                    , Network.Aws
                    , Model.Env
                    , Model.Lambda
                    , Model.Log
                    , Util
  hs-source-dirs:     src
  ghc-options:        -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively
  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , BlockArguments
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveGeneric
                    , DerivingStrategies
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , PolyKinds
                    , OverloadedStrings
                    , RankNTypes
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeApplications
                    , TypeOperators
                    , TypeFamilies
  build-depends:      base ^>=4.12.0.0
                    , aeson
                    , attoparsec
                    , binary
                    , bytestring
                    , case-insensitive
                    , co-log
                    , containers
                    , either
                    , errors
                    , free
                    , http-client
                    , http-media
                    , http-types
                    , generic-lens
                    , polysemy
                    , polysemy-plugin
                    , servant
                    , servant-client
                    , servant-client-core
                    , split
                    , text
                    , text-conversions
                    , text-show
                    , transformers-either
                    , unordered-containers

executable lamh
  main-is:          lamh.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -O2 -flate-specialise -fspecialise-aggressively
  if os(linux)
    ld-options:     -static -pthread
  default-language: Haskell2010
  build-depends:    base ^>=4.12.0.0
                  , lamh
                  , polysemy
                  , polysemy-plugin
