cabal-version:        2.4
name:                 lamha
version:              0.1.0.0
license:              BSD-3-Clause
license-file:         LICENSE
author:               delivery group | earnestresearch.com
maintainer:           mlee@earnestresearch.com
category:             aws
extra-source-files:   CHANGELOG.md

library
  exposed-modules:    Aws.Lambda
                    , Aws.Event.Kinesis
                    , Aws.Event.S3
                    , Http.Client
  hs-source-dirs:     src
  ghc-options:        -O2 -flate-specialise -fspecialise-aggressively
  default-language:   Haskell2010
  default-extensions: BlockArguments
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveGeneric
                    , DerivingStrategies
                    , FlexibleContexts
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , PolyKinds
                    , OverloadedStrings
                    , RankNTypes
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeApplications
                    , TypeOperators
                    , TypeFamilies
  build-depends:      base ^>=4.12.0.0
                    , aeson
                    , http-client
                    , lens
                    , polysemy
                    , polysemy-plugin
                    , req
                    , servant
                    , servant-client
                    , text
                    , text-conversions
                    , unordered-containers

executable lamha
  main-is:            lamha.hs
  hs-source-dirs:     app
  ghc-options:        -O2 -flate-specialise -fspecialise-aggressively
  default-language:   Haskell2010
  build-depends:      base ^>=4.12.0.0
                    , lamha
                    , polysemy
                    , polysemy-plugin
