cabal-version:        2.4
name:                 lamha
version:              0.1.0.0
license:              BSD-3-Clause
license-file:         LICENSE
author:               delivery group | earnestresearch.com
maintainer:           mlee@earnestresearch.com
category:             aws
extra-source-files:   CHANGELOG.md

library
  exposed-modules:    Event.ApiGatewayInput
                    , Event.ApiGatewayOutput
                    , Event.Event
                    , Event.Kinesis
                    , Event.S3
                    , Event.Sns
                    , Lambda
                    , Internal.EventUtil
                    , Internal.KinesisUtil
                    , Internal.S3Util
                    , Internal.SnsUtil
                    , Network.Aws
                    , Sem.Eg
                    , Sem.Lambda
                    , Sem.Tty
  hs-source-dirs:     src
  ghc-options:        -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively
  default-language:   Haskell2010
  default-extensions: BlockArguments
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveGeneric
                    , DerivingStrategies
                    , FlexibleContexts
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , PolyKinds
                    , OverloadedStrings
                    , RankNTypes
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeApplications
                    , TypeOperators
                    , TypeFamilies
  build-depends:      base ^>=4.12.0.0
                    , aeson
                    , attoparsec
                    , bytestring
                    , either
                    , free
                    , http-client
                    , http-media
                    , lens
                    , polysemy
                    , polysemy-plugin
                    , servant
                    , servant-client
                    , servant-client-core
                    , text
                    , text-conversions
                    , transformers-either
                    , unordered-containers

executable lamha
  main-is:          lamha.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -O2 -flate-specialise -fspecialise-aggressively
  when:
    - condition:    os(linux)
      ld-options:     -static
  default-language: Haskell2010
  build-depends:    base ^>=4.12.0.0
                  , lamha
                  , polysemy
                  , polysemy-plugin
